@@ -20,7 +20,6 @@ import org.elasticsearch.common.Strings;
 
 import java.util.Arrays;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * Invokes a force merge on a single index.
@@ -67,10 +66,7 @@ public class ForceMergeStep extends AsyncActionStep {
                     policyName,
                     failures == null
                         ? "n/a"
-                        : Strings.collectionToDelimitedString(
-                            Arrays.stream(failures).map(Strings::toString).collect(Collectors.toList()),
-                            ","
-                        ),
+                        : Strings.collectionToDelimitedString(Arrays.stream(failures).map(Strings::toString).toList(), ","),
                     NAME
                 );
                 logger.warn(errorMessage);
