@@ -32,12 +32,13 @@ import org.elasticsearch.xpack.core.ilm.action.GetLifecycleAction.Response;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
 public class TransportGetLifecycleAction extends TransportMasterNodeAction<Request, Response> {
+
+    private final IndexNameExpressionResolver indexNameExpressionResolver;
 
     @Inject
     public TransportGetLifecycleAction(
@@ -54,10 +55,10 @@ public class TransportGetLifecycleAction extends TransportMasterNodeAction<Reque
             threadPool,
             actionFilters,
             Request::new,
-            indexNameExpressionResolver,
             Response::new,
             threadPool.executor(ThreadPool.Names.MANAGEMENT)
         );
+        this.indexNameExpressionResolver = indexNameExpressionResolver;
     }
 
     @Override
@@ -71,7 +72,7 @@ public class TransportGetLifecycleAction extends TransportMasterNodeAction<Reque
         IndexLifecycleMetadata metadata = clusterService.state().metadata().custom(IndexLifecycleMetadata.TYPE);
         if (metadata == null) {
             if (request.getPolicyNames().length == 0) {
-                listener.onResponse(new Response(Collections.emptyList()));
+                listener.onResponse(new Response(List.of()));
             } else {
                 listener.onFailure(
                     new ResourceNotFoundException("Lifecycle policy not found: {}", Arrays.toString(request.getPolicyNames()))
